--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.7",
     "font-awesome": "^4.7.0",
-    "jquery": "1.9.1 - 3",
+    "jquery": ">=3.4.0",
     "ngx-bootstrap": "^3.1.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.3.3",
